--- a/game/game-styles.css
+++ b/game/game-styles.css
@@ -45,6 +45,10 @@ html, body {
 .table-container {
     user-select: none; /* Запрещаем выделение текста */
 }
+.table-container {
+    /*transition: transform 0.1s ease-out;*/
+    touch-action: none; /* Отключаем стандартную прокрутку на тач-устройствах */
+}
 td {
     width: 40px;
     height: 40px;
@@ -155,10 +159,9 @@ table {
 }
 
 .color-circle-container {
-    margin-left: 50px;
     position: fixed;
-    bottom: 20px; /* Такая же высота как у шкалы */
-    left: calc(50% - 240px); /* Смещаем влево от центра (300px/2 + 30px отступа) */
+    bottom: 20px;
+    left: calc(50% - 240px);
     width: 80px;
     height: 80px;
     background: linear-gradient(to bottom, #363636, #060606);
@@ -168,7 +171,7 @@ table {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10; /* Чтобы круг был над шкалой если нужно */
+    z-index: 10;
 }
 
 .color-circle-container:hover {
@@ -205,7 +208,7 @@ table {
     justify-content: center;
     align-items: center;
 }
-  #save-button {
+#save-button {
     position: fixed;
     top: 20px;
     left: 20px;
@@ -221,7 +224,7 @@ table {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
     z-index: 1000;
-  }
+}
   
   #save-button:hover {
     background-color: rgba(120, 120, 120, 0.9);
